--- a/src/Styles/Components/_root.scss
+++ b/src/Styles/Components/_root.scss
@@ -8,3 +8,10 @@ body {
 	font-family: "Fredoka", spotify-circular, spotify-circular-cyrillic, spotify-circular-arabic, spotify-circular-hebrew,
 		"Helvetica Neue", helvetica, arial, "Hiragino Kaku Gothic Pro", Meiryo, "MS Gothic", sans-serif;
 }
+
+.root {
+	display: grid;
+	place-items: center;
+	height: 100vh;
+	gap: 1rem;
+}
