--- a/src/Styles/Pages/_home.scss
+++ b/src/Styles/Pages/_home.scss
@@ -43,10 +43,11 @@
 	}
 
 	.checkbox {
+		$size: 2rem;
 		position: relative;
 
-		width: 1rem;
-		height: 1rem;
+		width: $size;
+		height: $size;
 
 		grid-row: 1/1;
 		grid-column: 1/1;
